2010-06-17  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/EncapsulateFieldDialog.cs:
	* MonoDevelop.Refactoring/OverridesImplementsDialog.cs:
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodDialog.cs:
	* MonoDevelop.Refactoring.ImplementInterface/ImplementImplicit.cs:
	* MonoDevelop.Refactoring.ImplementInterface/ImplementExplicit.cs:
	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  Added help windows for refactorings that use the insertion
	  point mode.

2010-06-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Refactoring/OverridesImplementsDialog.cs:
	* MonoDevelop.CodeGeneration/OverrideMembersGenerator.cs:
	  Track API.

2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  Improved parameter naming of created methods.

2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  added null check.

2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/HelperMethods.cs:
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs:
	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  Create method now uses insertion cursor.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  fixed null reference exception.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/HelperMethods.cs:
	* MonoDevelop.CodeGeneration/ToStringGenerator.cs:
	* MonoDevelop.CodeGeneration/PropertyGenerator.cs:
	* MonoDevelop.CodeGeneration/NullCheckGenerator.cs:
	* MonoDevelop.CodeGeneration/WriteLineGenerator.cs:
	* MonoDevelop.Refactoring/EncapsulateFieldDialog.cs:
	* MonoDevelop.CodeGeneration/AbstractGenerateAction.cs:
	* MonoDevelop.Refactoring/OverridesImplementsDialog.cs:
	* MonoDevelop.CodeGeneration/OverrideMembersGenerator.cs: